Fixed dependencies